# mcWitchHutFinder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp
benchmarks/: CMakeLists.txt  getFetureVsGetSructure.cpp  strucurePosVsSwampHut.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  getHutPosition.cpp  getHutPosition.hpp  main.cpp  types.hpp
