cmake_minimum_required(VERSION 3.0.0)
project(WichHutFinder)
include_directories(lib)
link_directories(${CMAKE_SOURCE_DIR}/lib/cubiomes)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg -pthread -Wall")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
add_subdirectory(lib)
add_subdirectory(src)
add_subdirectory(benchmarks)